Remove HTTP listener rules for Networks

--- a/stacks/container-apps/networks.prx.org.yml
+++ b/stacks/container-apps/networks.prx.org.yml
@@ -137,19 +137,19 @@ Resources:
             - !Sub ${AppName}.*
       ListenerArn: !Ref PlatformALBHTTPSListenerArn
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "00"]]
-  ALBHTTPHostWildcardListenerRule:
-    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
-    Condition: CreateProductionResources
-    Properties:
-      Actions:
-        - TargetGroupArn: !Ref ALBTargetGroup
-          Type: forward
-      Conditions:
-        - Field: host-header
-          Values:
-            - !Sub ${AppName}.*
-      ListenerArn: !Ref PlatformALBHTTPListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "00"]]
+  # ALBHTTPHostWildcardListenerRule:
+  #   Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+  #   Condition: CreateProductionResources
+  #   Properties:
+  #     Actions:
+  #       - TargetGroupArn: !Ref ALBTargetGroup
+  #         Type: forward
+  #     Conditions:
+  #       - Field: host-header
+  #         Values:
+  #           - !Sub ${AppName}.*
+  #     ListenerArn: !Ref PlatformALBHTTPListenerArn
+  #     Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "00"]]
   ALBHTTPSAlternateWildcardListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
     Condition: HasAltName
@@ -163,19 +163,19 @@ Resources:
             - !Sub ${AltName}.*
       ListenerArn: !Ref PlatformALBHTTPSListenerArn
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "01"]]
-  ALBHTTPAlternateWildcardListenerRule:
-    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
-    Condition: HasAltName
-    Properties:
-      Actions:
-        - TargetGroupArn: !Ref ALBTargetGroup
-          Type: forward
-      Conditions:
-        - Field: host-header
-          Values:
-            - !Sub ${AltName}.*
-      ListenerArn: !Ref PlatformALBHTTPListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "01"]]
+  # ALBHTTPAlternateWildcardListenerRule:
+  #   Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+  #   Condition: HasAltName
+  #   Properties:
+  #     Actions:
+  #       - TargetGroupArn: !Ref ALBTargetGroup
+  #         Type: forward
+  #     Conditions:
+  #       - Field: host-header
+  #         Values:
+  #           - !Sub ${AltName}.*
+  #     ListenerArn: !Ref PlatformALBHTTPListenerArn
+  #     Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "01"]]
   ALBHTTPSExplicitListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
     Condition: HasExplicitHostHeader
@@ -189,19 +189,19 @@ Resources:
             - !Ref ExplicitHostHeader
       ListenerArn: !Ref PlatformALBHTTPSListenerArn
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "10"]]
-  ALBHTTPExplicitListenerRule:
-    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
-    Condition: HasExplicitHostHeader
-    Properties:
-      Actions:
-        - TargetGroupArn: !Ref ALBTargetGroup
-          Type: forward
-      Conditions:
-        - Field: host-header
-          Values:
-            - !Ref ExplicitHostHeader
-      ListenerArn: !Ref PlatformALBHTTPListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "10"]]
+  # ALBHTTPExplicitListenerRule:
+  #   Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+  #   Condition: HasExplicitHostHeader
+  #   Properties:
+  #     Actions:
+  #       - TargetGroupArn: !Ref ALBTargetGroup
+  #         Type: forward
+  #     Conditions:
+  #       - Field: host-header
+  #         Values:
+  #           - !Ref ExplicitHostHeader
+  #     ListenerArn: !Ref PlatformALBHTTPListenerArn
+  #     Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "10"]]
   # CloudWatch Alarms
   ALBTargetGroup500Alarm:
     Type: "AWS::CloudWatch::Alarm"
