Add function log group

--- a/devops/chat-ops/cloudwatch-alarms/template.yml
+++ b/devops/chat-ops/cloudwatch-alarms/template.yml
@@ -80,3 +80,8 @@ Resources:
         prx:ops:environment: Production
         prx:dev:application: DevOps
       Timeout: 8
+  CloudWatchAlarmsFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${CloudWatchAlarmsFunction}
+      RetentionInDays: 14
