--- a/devops/aws-management/cd/template.yml
+++ b/devops/aws-management/cd/template.yml
@@ -29,6 +29,10 @@ Parameters:
       Allows one or more monitoring accounts to view AWS Organization account
       list. Enter AWS account ids, 12 numeric digits in comma-separated list
     Type: String
+  DevOpsAccountId:
+    Type: String
+  DevOpsCloudWatchAlarmsBusArn:
+    Type: String
 
 Resources:
   PipelineArtifactStore:
@@ -385,10 +389,35 @@ Resources:
                 Capabilities: CAPABILITY_NAMED_IAM
                 Description: >-
                   Launches a stack in each region in the management account
-                  to create a Lambda function that can monitor CloudTrails for various
-                  types of activity.
+                  to create a Lambda function that can monitor CloudTrails for
+                  various types of activity.
                 TemplatePath: InfrastructureRepoSourceArtifact::devops/aws-management/devops-cloudtrail-monitor.yml
                 Parameters: !Sub ParameterKey=SlackMessageRelayTopicArn,ParameterValue=${SlackMessageRelayTopicArn}
+                PermissionModel: SELF_MANAGED
+                DeploymentTargets: !Ref AWS::AccountId
+                # Excludes: af-south-1, eu-south-1, me-south-1, ap-east-1
+                Regions: us-east-1,us-east-2,us-west-1,us-west-2,ap-south-1,ap-northeast-3,ap-northeast-2,ap-southeast-1,ap-southeast-2,ap-northeast-1,ca-central-1,eu-central-1,eu-west-1,eu-west-2,eu-west-3,eu-north-1,sa-east-1
+                FailureTolerancePercentage: 95
+                MaxConcurrentPercentage: 100
+              InputArtifacts:
+                - Name: InfrastructureRepoSourceArtifact
+              RunOrder: 1
+            # CloudWatch Alarms event bus stack set for management account
+            - Name: CloudWatchAlarmsEventBusStackSetForManagementAccount
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormationStackSet
+                Version: "1"
+              Configuration:
+                StackSetName: org-cloudwatch-alarms-event-bus-mgmt
+                Capabilities: CAPABILITY_IAM
+                Description: >-
+                  Launches a stack in each region in the management account
+                  to create a rule on the default event bus that forwards
+                  CloudWatch Alarm state changes to the DevOps event bus.
+                TemplatePath: InfrastructureRepoSourceArtifact::devops/aws-management/organization-alarms-bus.yml
+                Parameters: !Sub ParameterKey=DevOpsCloudWatchAlarmsBusArn,ParameterValue=${DevOpsCloudWatchAlarmsBusArn},ParameterKey=DevOpsAccountId,ParameterValue=${DevOpsAccountId}
                 PermissionModel: SELF_MANAGED
                 DeploymentTargets: !Ref AWS::AccountId
                 # Excludes: af-south-1, eu-south-1, me-south-1, ap-east-1
