Add missing auto expand

--- a/devops/aws-management/cd/template.yml
+++ b/devops/aws-management/cd/template.yml
@@ -411,7 +411,7 @@ Resources:
                 Version: "1"
               Configuration:
                 StackSetName: org-cloudwatch-alarms-event-bus-mgmt
-                Capabilities: CAPABILITY_IAM
+                Capabilities: CAPABILITY_IAM,CAPABILITY_AUTO_EXPAND
                 Description: >-
                   Launches a stack in each region in the management account
                   to create a rule on the default event bus that forwards
