Fix parameter formatting

--- a/devops/aws-management/cd/template.yml
+++ b/devops/aws-management/cd/template.yml
@@ -417,7 +417,9 @@ Resources:
                   to create a rule on the default event bus that forwards
                   CloudWatch Alarm state changes to the DevOps event bus.
                 TemplatePath: InfrastructureRepoSourceArtifact::devops/aws-management/organization-alarms-bus.yml
-                Parameters: !Sub ParameterKey=DevOpsCloudWatchAlarmsBusArn,ParameterValue=${DevOpsCloudWatchAlarmsBusArn},ParameterKey=DevOpsAccountId,ParameterValue=${DevOpsAccountId}
+                Parameters: !Sub |-
+                  ParameterKey=DevOpsCloudWatchAlarmsBusArn,ParameterValue=${DevOpsCloudWatchAlarmsBusArn}
+                  ParameterKey=DevOpsAccountId,ParameterValue=${DevOpsAccountId}
                 PermissionModel: SELF_MANAGED
                 DeploymentTargets: !Ref AWS::AccountId
                 # Excludes: af-south-1, eu-south-1, me-south-1, ap-east-1
