Fix rule naming

--- a/devops/aws-management/organization-alarms-bus.yml
+++ b/devops/aws-management/organization-alarms-bus.yml
@@ -50,6 +50,6 @@ Resources:
       State: ENABLED
       Targets:
         - Arn: !Ref DevOpsCloudWatchAlarmsBusArn
-          Id: !Sub ${AWS::StackName}-cw-alarm-bus-
+          Id: devops-cloudwatch-alarms-event-bus-fwd
           InputPath: $
           RoleArn: !GetAtt EventRuleRole.Arn
