--- a/devops/aws-management/organization-alarms-bus.yml
+++ b/devops/aws-management/organization-alarms-bus.yml
@@ -2,7 +2,9 @@
 
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
-Description: Creates a CloudTrail Organization trail
+Description: >-
+  Creates a EventBridge rule that forwards all CloudWatch Alarms state change
+  events to the DevOps alarms bus
 
 Parameters:
   DevOpsCloudWatchAlarmsBusArn:
@@ -51,5 +53,4 @@ Resources:
       Targets:
         - Arn: !Ref DevOpsCloudWatchAlarmsBusArn
           Id: devops-cloudwatch-alarms-event-bus-fwd
-          InputPath: $
           RoleArn: !GetAtt EventRuleRole.Arn
