Add service-managed stack set for alarms event bus rule

--- a/devops/aws-management/cd/template.yml
+++ b/devops/aws-management/cd/template.yml
@@ -429,6 +429,35 @@ Resources:
               InputArtifacts:
                 - Name: InfrastructureRepoSourceArtifact
               RunOrder: 1
+            # CloudWatch Alarms event bus stack set
+            - Name: CloudWatchAlarmsEventBusStackSet
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormationStackSet
+                Version: "1"
+              Configuration:
+                StackSetName: org-cloudwatch-alarms-event-bus
+                Capabilities: CAPABILITY_IAM,CAPABILITY_AUTO_EXPAND
+                Description: >-
+                  Launches a stack in each region in each account in an AWS Organization
+                  to create a rule on the default event bus that forwards CloudWatch
+                  Alarm state changes to the DevOps event bus.
+                TemplatePath: InfrastructureRepoSourceArtifact::devops/aws-management/organization-alarms-bus.yml
+                Parameters: !Sub |-
+                  ParameterKey=DevOpsCloudWatchAlarmsBusArn,ParameterValue=${DevOpsCloudWatchAlarmsBusArn}
+                  ParameterKey=DevOpsAccountId,ParameterValue=${DevOpsAccountId}
+                PermissionModel: SERVICE_MANAGED
+                OrganizationsAutoDeployment: EnabledWithStackRetention
+                DeploymentTargets: !Ref OrganizationRootId
+                # Excludes: af-south-1, eu-south-1, me-south-1, ap-east-1
+                Regions: us-east-1,us-east-2,us-west-1,us-west-2,ap-south-1,ap-northeast-3,ap-northeast-2,ap-southeast-1,ap-southeast-2,ap-northeast-1,ca-central-1,eu-central-1,eu-west-1,eu-west-2,eu-west-3,eu-north-1,sa-east-1
+                FailureTolerancePercentage: 95
+                MaxConcurrentPercentage: 100
+              InputArtifacts:
+                - Name: InfrastructureRepoSourceArtifact
+              RunOrder: 1
+
         - Name: Notify
           Actions:
             - Name: DeploymentNotification
