DT3 CDN validation records

--- a/dns/prxu.org-hosted_zone.yml
+++ b/dns/prxu.org-hosted_zone.yml
@@ -227,10 +227,22 @@ Resources:
             - _eb91f077232ecd07ccc5577e38f044dc.ltfvzjuylp.acm-validations.aws.
           TTL: "3600"
           Type: CNAME
+        # dovetail3-cdn.prxu.org
+        - Name: !Sub _bdc9c0aee7b25e4f58672dcf99effdee.dovetail3-cdn.${Domain}
+          ResourceRecords:
+            - _fd6bf8621e52b3f035548981aefc586e.jddtvkljgg.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
         # dovetail-cdn-staging.prxu.org
         - Name: !Sub _c0a78e4dc0641158468774cfeec66f6e.dovetail-cdn-staging.${Domain}
           ResourceRecords:
             - _b91071c10a4b4ac682e4556bbca3f2f1.ltfvzjuylp.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+        # dovetail-cdn-staging.prxu.org
+        - Name: !Sub _c1b1e485e79ba8aba8cccec10eaba637.dovetail3-cdn-staging.${Domain}
+          ResourceRecords:
+            - _05fd9745b2d8eadd458ddd56e359a9d6.jddtvkljgg.acm-validations.aws.
           TTL: "3600"
           Type: CNAME
         # a.prxu.org
