Add missing function association

--- a/cdn/dovetail3-cdn.yml
+++ b/cdn/dovetail3-cdn.yml
@@ -174,7 +174,9 @@ Resources:
           CachedMethods: [HEAD, GET]
           CachePolicyId: !Ref CloudFrontCachePolicy
           Compress: false
-          # TODO: viewer-request cloudfront function
+          FunctionAssociations:
+            - EventType: viewer-request
+              FunctionARN: !GetAtt ViewerRequestCloudFrontFunction.FunctionMetadata.FunctionARN
           # TODO: origin-request edge lambda function
           OriginRequestPolicyId: !Ref CloudFrontOriginRequestPolicy
           TargetOriginId: dovetail3-stitch-s3
