Add dovetail prefix param

--- a/cdn/dovetail3-cdn.yml
+++ b/cdn/dovetail3-cdn.yml
@@ -19,11 +19,14 @@ Metadata:
         Parameters:
           - OriginBucket
           - DistributionDomain
+          - ExpiredRedirectPrefix
     ParameterLabels:
       OriginBucket:
         default: Primary dovetail-cdn-arranger S3 Bucket
       DistributionDomain:
         default: Domain Name
+      ExpiredRedirectPrefix:
+        default: Prefix for redirecting back to Dovetail
       InfrastructureNotificationsStackName:
         default: Notifications stack name
 
@@ -34,6 +37,9 @@ Parameters:
   DistributionDomain:
     Type: String
     Description: eg. dovetail3-cdn.prxu.org
+  ExpiredRedirectPrefix:
+    Type: String
+    Description: eg. https://dovetail.prxu.org/_
   InfrastructureNotificationsStackName:
     Default: infrastructure-notifications
     Description: The name of a previously launched notifications stack
