--- a/db/postgresql-instance.yml
+++ b/db/postgresql-instance.yml
@@ -77,7 +77,7 @@ Parameters:
     MinLength: 1
     MaxLength: 256
   ProvisionedIOPS:
-    Type: Number
+    Type: String
     Description: The number of IOPS that the database provisions (leave blank to use GP2 storage)
   UniqueName:
     Type: String
